--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,7 +7,7 @@ body {
     overflow: hidden;
 }
 .sidebar {
-    width: 20%;
+    width: 300px;
     background-color: #f8f8f8;
     padding: 20px;
     box-shadow: 2px 0 5px rgba(0,0,0,0.1);
@@ -35,7 +35,7 @@ body {
 }
 .content {
     flex: 1;
-    margin-left: 20%;
+    margin-left: 340px;
     padding: 20px;
     overflow: auto;
 }
@@ -65,7 +65,7 @@ label, select {
 }
 @media (max-width: 1200px) {
     .content {
-        margin-left: 20%;
+        margin-left:340px;
         width: 80%;
     }
     .sidebar {
