--- a/assets/styles.css
+++ b/assets/styles.css
@@ -37,14 +37,15 @@ body {
     height: calc(100vh - 50px);
     position: fixed;
     top: 50px;
-    left: 15px;
+    left: 0px;
+    padding-left: 15px;
     z-index: 1000; /* Added z-index */
     overflow-y: auto; /* Added for scrolling if content is too long */
 }
 
 .sidebar a {
     display: block;
-    padding: 10px;
+    padding: 10px 10px 10px 0;
     text-decoration: none;
     color: #333;
 }
